# DoubleTrace

./: CMakeLists.txt  README.md
include/dtrace/: SparseSet.hpp  defs.h  embedding.h  graph.h  io.h  local_trace.h  perm_list.h  stat_printer.h  stats.h  traversor.h  util.h
include/dtrace/benchmark/: bench.h
include/dtrace/bruteforce/: embedding.h  face_trace.h
include/dtrace/canon/: emb_brute.h  emb_naive.h  embedding.h  trace.h
include/dtrace/graph/: base.h
include/graphio/: csv.h  g6.h  util.h
include/kface/: Find.hpp  Gap.hpp  GapHist.hpp  Graph.hpp
include/morphism/: aut.h  iso.h
lib/bliss/: CMakeLists.txt
src/: BAD_TIME.hpp  CMakeLists.txt  embedding.cpp  graph.cpp  io.cpp  local_trace.cpp  main.cpp  perm_list.cpp  stat_printer.cpp  traversor.cpp  util.cpp
src/aut_checker/: main.cpp
src/benchmark/: CMakeLists.txt  bench.cpp  main.cpp  main_old.cpp
src/bruteforce/: CMakeLists.txt  embedding.cpp  face_trace.cpp
src/canon/: CMakeLists.txt  emb_brute.cpp  emb_naive.cpp  embedding.cpp  trace.cpp
src/collect_gaps/: CMakeLists.txt  main.cpp
src/ctest/: CMakeLists.txt  main.cpp
src/gap_hist/: CMakeLists.txt  main.cpp
src/graph_meta/: main.cpp
src/kface/: AutGroup.cpp  AutGroup.hpp  CMakeLists.txt  Canon.cpp  Canon.hpp  Enumerate.hpp  Find.cpp  Gap.cpp  GapHist.cpp  Group.cpp  Group.hpp  KTrace.hpp  LocalRotation.cpp  LocalRotation.hpp  Matrix2d.hpp  PruneVector.hpp  PruneVector2.hpp  RotationSystem.cpp  RotationSystem.hpp  SparseSet.hpp  Trace.cpp  Trace.hpp  Util.hpp  main.cpp
src/kface/feasible/: AvgGap.hpp  BioGap.hpp  EdgeGap.hpp  GapDist.hpp  MaxGap.hpp
src/kface/prune/: All.cpp  All.hpp  Gap.cpp  Gap.hpp  KNone.cpp  KNone.hpp  KOrderlyGen.cpp  KOrderlyGen.hpp  None.cpp  None.hpp  OOrderlyGen.cpp  OOrderlyGen.hpp  OOrderlyGen2.hpp
src/kface/test/: CMakeLists.txt  TestFind.cpp  tg5.cpp  tg6.cpp
src/morphism/: CMakeLists.txt  aut.cpp  iso.cpp
test/: CMakeLists.txt
test/embedding/: traversor.cpp
